# chaining

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  pipe.rs  tap.rs
